fix: bg blur on small devices

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ body {
 	position: fixed;
 	width: 100%;
 	height: 100%;
-	filter: blur(8vw);
 	z-index: -1;
+	filter: blur(6em);
 }
 #square {
 	background-color: var(--square-color);
@@ -124,7 +124,7 @@ ul {
 	font-size: 0.75rem;
 }
 aside {
-    opacity: 0.5;
+	opacity: 0.5;
 }
 
 /* interactivity */
